<resources>
    <string name="app_name">BeaconQuest</string>

    <!-- sign in/up screen -->
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    <!-- sign in strings -->
    <string name="login">Login</string>

    <!-- signup screen -->
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm password</string>

    <!-- beacon found aftermath -->
    <string name="beacon_found"><b>Beacon found</b></string>
    <string name="newquest_label">Here is your new quest</string>
    <string name="newquest_description_default">NEW QUEST</string>
    <string name="newquest_still_quest_left">You have to finish your quest first</string>
    <string name="send">Send</string>
    <string name="answer">Answer</string>

</resources>
