<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="64dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center">

            <!-- Username -->
            <android.support.design.widget.TextInputLayout
                style="@style/sigin_textfield_container">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/signup_username_box"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical|left|start"
                    android:hint="@string/username"
                    android:inputType="text"
                    style="@style/signin_textfield"/>

            </android.support.design.widget.TextInputLayout>

            <!-- Email -->
            <android.support.design.widget.TextInputLayout
                style="@style/sigin_textfield_container">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/signup_email_box"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical|left|start"
                    android:hint="@string/email"
                    android:inputType="text"
                    style="@style/signin_textfield"/>

            </android.support.design.widget.TextInputLayout>

            <!-- Password -->
            <android.support.design.widget.TextInputLayout
                style="@style/sigin_textfield_container"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/signup_password_box"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical|left|start"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    style="@style/signin_textfield"/>

            </android.support.design.widget.TextInputLayout>


            <!-- Confirm Password -->
            <android.support.design.widget.TextInputLayout
                style="@style/sigin_textfield_container"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/signup_password_confirm_box"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical|left|start"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    style="@style/signin_textfield"/>

            </android.support.design.widget.TextInputLayout>

            </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/register"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
